# tiny-renderer

./: Cargo.toml  README.md  README_EN.md
assets/: cornell-box.gltf
examples/: bresenham_line.rs  rendering.rs  wireframe.rs  wireframe_rendering.rs
src/: camera.rs  color.rs  lib.rs  light.rs  line.rs  loader.rs  main.rs  material.rs  math.rs  mesh.rs  model.rs  renderer.rs  shader.rs  texture.rs  transform.rs  util.rs
