[package]
name = "tiny-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
gltf = "1.1.0"

[[example]]
name = "bresenham_line"
path = "examples/bresenham_line.rs"

[[example]]
name = "wireframe_rendering"
path = "examples/wireframe_rendering.rs"